--- a/public/insight.html
+++ b/public/insight.html
@@ -3,42 +3,49 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Insights | NeraInsight</title>
+  <title>My Insights | NeraInsight</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-      background-color: #f5f7fa;
+      background-color: #f0f2f5;
       font-family: 'Segoe UI', sans-serif;
     }
-    .card {
+    .insight-card {
       border-radius: 16px;
+      padding: 25px;
+      background: white;
       box-shadow: 0 0 12px rgba(0,0,0,0.08);
+      text-align: center;
     }
-    .info-label {
+    .insight-title {
+      font-size: 20px;
+      color: #2a5298;
+    }
+    .insight-value {
+      font-size: 32px;
       font-weight: bold;
-      color: #333;
+      color: #111;
     }
   </style>
 </head>
 <body>
 
-  <!-- ✅ Token Session Check -->
+  <!-- Check Login -->
   <script>
     const token = localStorage.getItem('neraToken');
     const user = JSON.parse(localStorage.getItem('neraUser'));
-
     if (!token || !user) {
-      alert("Session expired or error occurred. Please log in again");
-      localStorage.clear();
+      alert('⚠️ You are not logged in. Redirecting...');
       window.location.href = 'login.html';
     }
   </script>
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4">
-    <a class="navbar-brand" href="dashboard.html">₦eraInsight</a>
+    <a class="navbar-brand" href="index.html">₦eraInsight</a>
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="dashboard.html">Dashboard</a></li>
         <li class="nav-item"><a class="nav-link" href="invest.html">Invest</a></li>
         <li class="nav-item"><a class="nav-link" href="withdraw.html">Withdraw</a></li>
         <li class="nav-item"><a class="nav-link" href="referral.html">Referral</a></li>
@@ -46,16 +53,26 @@
     </div>
   </nav>
 
-  <!-- Main Content -->
+  <!-- Insight Section -->
   <div class="container my-5">
-    <h2 class="text-center mb-4">Your Investment Insights</h2>
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <div class="card p-4">
-          <p><span class="info-label">Phone:</span> <span id="phone">Loading...</span></p>
-          <p><span class="info-label">Total Investments:</span> <span id="totalInvestments">₦0</span></p>
-          <p><span class="info-label">Active Packages:</span> <span id="activePackages">0</span></p>
-          <p><span class="info-label">Profit This Week:</span> <span id="weeklyProfit">₦0</span></p>
+    <h2 class="text-center mb-4">📊 Your Investment Insights</h2>
+    <div class="row g-4">
+      <div class="col-md-4">
+        <div class="insight-card">
+          <div class="insight-title">Total Investments</div>
+          <div class="insight-value" id="total">0</div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="insight-card">
+          <div class="insight-title">Active Packages</div>
+          <div class="insight-value" id="active">0</div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="insight-card">
+          <div class="insight-title">Total Profit</div>
+          <div class="insight-value" id="profit">₦0</div>
         </div>
       </div>
     </div>
@@ -67,36 +84,28 @@
   </footer>
 
   <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    const API_BASE = 'https://nerainsight.onrender.com/api';
-
-    document.getElementById('phone').textContent = user.phone;
-
-    async function loadInsights() {
-      try {
-        const res = await fetch(`${API_BASE}/insights`, {
-          headers: {
-            'Authorization': 'Bearer ' + token
-          }
-        });
-
-        if (!res.ok) {
-          throw new Error("Session expired");
-        }
-
-        const data = await res.json();
-
-        document.getElementById('totalInvestments').textContent = '₦' + data.totalInvestments;
-        document.getElementById('activePackages').textContent = data.activePackages;
-        document.getElementById('weeklyProfit').textContent = '₦' + data.weeklyProfit;
-      } catch (err) {
-        alert("Session expired or error occurred. Please log in again");
-        localStorage.clear();
-        window.location.href = 'login.html';
+    fetch('https://nerainsight.onrender.com/api/insights', {
+      method: 'GET',
+      headers: {
+        'Authorization': 'Bearer ' + token
       }
-    }
-
-    loadInsights();
+    })
+    .then(res => {
+      if (!res.ok) throw new Error();
+      return res.json();
+    })
+    .then(data => {
+      document.getElementById('total').textContent = data.totalInvestments;
+      document.getElementById('active').textContent = data.activePackages;
+      document.getElementById('profit').textContent = '₦' + data.totalProfit.toLocaleString();
+    })
+    .catch(() => {
+      alert('⚠️ Session expired. Please log in again.');
+      localStorage.clear();
+      window.location.href = 'login.html';
+    });
   </script>
 
 </body>
