--- a/public/invest.html
+++ b/public/invest.html
@@ -45,8 +45,10 @@
   <script>
     const token = localStorage.getItem('neraToken');
     const user = JSON.parse(localStorage.getItem('neraUser'));
-    if (!token || !user) {
-      alert('You are not logged in. Redirecting to login...');
+
+    if (!token || !user || !user.phone) {
+      alert('❌ You are not logged in or phone number is missing. Redirecting...');
+      localStorage.clear();
       window.location.href = 'login.html';
     }
   </script>
@@ -70,56 +72,41 @@
   <div class="container my-5">
     <h2 class="text-center mb-4">Investment Packages</h2>
     <div class="row g-4">
-      <!-- Package Loop -->
+      <!-- Package Template -->
       <div class="col-md-3 col-sm-6 col-12">
         <div class="package-card text-center">
           <h5>Starter Package</h5>
           <p><strong>Deposit:</strong> ₦2,000</p>
           <p><strong>Daily Return:</strong> ₦429</p>
           <p><strong>Withdrawal Amount:</strong> ₦3,000</p>
-          <button class="btn btn-nera w-100 invest-btn" data-amount="2000">
-            <span class="text">Invest ₦2,000</span>
-            <span class="spinner d-none"><span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span></span>
-          </button>
+          <button class="btn btn-nera w-100 invest-btn" data-amount="2000">Invest ₦2,000</button>
         </div>
       </div>
-
       <div class="col-md-3 col-sm-6 col-12">
         <div class="package-card text-center">
           <h5>Bronze Package</h5>
           <p><strong>Deposit:</strong> ₦3,000</p>
           <p><strong>Daily Return:</strong> ₦715</p>
           <p><strong>Withdrawal Amount:</strong> ₦5,500</p>
-          <button class="btn btn-nera w-100 invest-btn" data-amount="3000">
-            <span class="text">Invest ₦3,000</span>
-            <span class="spinner d-none"><span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span></span>
-          </button>
+          <button class="btn btn-nera w-100 invest-btn" data-amount="3000">Invest ₦3,000</button>
         </div>
       </div>
-
       <div class="col-md-3 col-sm-6 col-12">
         <div class="package-card text-center">
           <h5>Silver Package</h5>
           <p><strong>Deposit:</strong> ₦5,000</p>
           <p><strong>Daily Return:</strong> ₦1,286</p>
           <p><strong>Withdrawal Amount:</strong> ₦9,000</p>
-          <button class="btn btn-nera w-100 invest-btn" data-amount="5000">
-            <span class="text">Invest ₦5,000</span>
-            <span class="spinner d-none"><span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span></span>
-          </button>
+          <button class="btn btn-nera w-100 invest-btn" data-amount="5000">Invest ₦5,000</button>
         </div>
       </div>
-
       <div class="col-md-3 col-sm-6 col-12">
         <div class="package-card text-center">
           <h5>Elite Package</h5>
           <p><strong>Deposit:</strong> ₦7,500</p>
           <p><strong>Daily Return:</strong> ₦1,857</p>
           <p><strong>Withdrawal Amount:</strong> ₦13,000</p>
-          <button class="btn btn-nera w-100 invest-btn" data-amount="7500">
-            <span class="text">Invest ₦7,500</span>
-            <span class="spinner d-none"><span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span></span>
-          </button>
+          <button class="btn btn-nera w-100 invest-btn" data-amount="7500">Invest ₦7,500</button>
         </div>
       </div>
     </div>
@@ -133,16 +120,10 @@
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://js.paystack.co/v1/inline.js"></script>
-
   <script>
-    const investButtons = document.querySelectorAll('.invest-btn');
     const API_BASE = 'https://nerainsight.onrender.com/api';
-    const returnMap = {
-      2000: 3000,
-      3000: 5500,
-      5000: 9000,
-      7500: 13000
-    };
+    const investButtons = document.querySelectorAll('.invest-btn');
+    const returnMap = { 2000: 3000, 3000: 5500, 5000: 9000, 7500: 13000 };
 
     investButtons.forEach(button => {
       button.addEventListener('click', () => {
@@ -150,16 +131,16 @@
         const returns = returnMap[amount];
         const refId = 'NERA_' + Date.now() + '_' + Math.floor(Math.random() * 100000);
 
-        const btnText = button.querySelector('.text');
-        const btnSpinner = button.querySelector('.spinner');
+        console.log("Initiating Paystack:", {
+          amount, returns, phone: user.phone, refId
+        });
 
-        btnText.textContent = 'Processing...';
-        btnSpinner.classList.remove('d-none');
+        button.textContent = 'Opening Paystack…';
         button.disabled = true;
 
         const handler = PaystackPop.setup({
           key: 'pk_live_c5d1acb93adb2112be140b120b26e254c38489cc',
-          email: user?.phone + '@nera.com',
+          email: user.phone + '@nera.com',
           amount: amount * 100,
           currency: 'NGN',
           ref: refId,
@@ -175,25 +156,23 @@
               });
 
               const result = await verifyRes.json();
-
               if (verifyRes.ok) {
-                alert(result.message || '✅ Investment activated successfully!');
+                alert(result.message || '✅ Investment activated!');
                 window.location.href = 'dashboard.html';
               } else {
                 alert(result.message || '❌ Verification failed.');
               }
             } catch (err) {
               alert('⚠️ Network error. Try again.');
+              console.error(err);
             } finally {
-              btnText.textContent = `Invest ₦${amount.toLocaleString()}`;
-              btnSpinner.classList.add('d-none');
+              button.textContent = `Invest ₦${amount.toLocaleString()}`;
               button.disabled = false;
             }
           },
           onClose: function() {
             alert('⛔ Transaction canceled.');
-            btnText.textContent = `Invest ₦${amount.toLocaleString()}`;
-            btnSpinner.classList.add('d-none');
+            button.textContent = `Invest ₦${amount.toLocaleString()}`;
             button.disabled = false;
           }
         });
