--- a/public/invest.html
+++ b/public/invest.html
@@ -3,192 +3,160 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Investment Packages | NeraInsight</title>
+  <title>Invest | NeraInsight</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-      background-color: #f0f2f5;
+      background: #f5f6f8;
       font-family: 'Segoe UI', sans-serif;
     }
     .package-card {
-      border-radius: 16px;
-      padding: 20px;
       background: white;
-      box-shadow: 0 0 12px rgba(0,0,0,0.08);
+      border-radius: 14px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.07);
+      padding: 20px;
       height: 100%;
     }
     .btn-nera {
-      background-color: #2a5298;
+      background-color: #0e4b8b;
       color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 10px;
     }
-    .spinner-border {
-      width: 1rem;
-      height: 1rem;
-    }
-    @media (max-width: 768px) {
-      .package-card h5 {
-        font-size: 1.1rem;
-      }
-      .package-card p {
-        font-size: 0.95rem;
-      }
+    footer {
+      background: #0e4b8b;
+      color: white;
+      padding: 10px;
+      text-align: center;
+      margin-top: 40px;
     }
   </style>
 </head>
 <body>
 
-  <!-- Token Check -->
-  <script>
-    const token = localStorage.getItem('neraToken');
-    const user = JSON.parse(localStorage.getItem('neraUser'));
+<!-- ✅ Token Check -->
+<script>
+  const token = localStorage.getItem('neraToken');
+  const user = JSON.parse(localStorage.getItem('neraUser'));
 
-    if (!token || !user || !user.phone) {
-      alert('❌ You are not logged in or phone number is missing. Redirecting...');
-      localStorage.clear();
-      window.location.href = 'login.html';
-    }
-  </script>
+  if (!token || !user || !user.phone) {
+    alert('❌ You are not logged in. Redirecting to login.');
+    localStorage.clear();
+    window.location.href = 'login.html';
+  }
+</script>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4">
-    <a class="navbar-brand" href="index.html">₦eraInsight</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navLinks">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navLinks">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="dashboard.html">Dashboard</a></li>
-        <li class="nav-item"><a class="nav-link" href="withdraw.html">Withdraw</a></li>
-        <li class="nav-item"><a class="nav-link" href="referral.html">Referral</a></li>
-      </ul>
+<!-- ✅ Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark px-3">
+  <a class="navbar-brand" href="index.html">₦eraInsight</a>
+  <div class="collapse navbar-collapse">
+    <ul class="navbar-nav ms-auto">
+      <li class="nav-item"><a class="nav-link" href="dashboard.html">Dashboard</a></li>
+      <li class="nav-item"><a class="nav-link" href="withdraw.html">Withdraw</a></li>
+    </ul>
+  </div>
+</nav>
+
+<!-- ✅ Investment Packages -->
+<div class="container my-5">
+  <h2 class="text-center mb-4">Choose a Package</h2>
+  <div class="row g-4">
+    <!-- Package Loop -->
+    <div class="col-md-3 col-sm-6">
+      <div class="package-card text-center">
+        <h5>Starter</h5>
+        <p><strong>Deposit:</strong> ₦2,000</p>
+        <p><strong>Return:</strong> ₦3,000</p>
+        <button class="btn btn-nera w-100 invest-btn" data-amount="2000">Invest ₦2,000</button>
+      </div>
     </div>
-  </nav>
-
-  <!-- Investment Packages -->
-  <div class="container my-5">
-    <h2 class="text-center mb-4">Investment Packages</h2>
-    <div class="row g-4">
-      <div class="col-md-3 col-sm-6 col-12">
-        <div class="package-card text-center">
-          <h5>Starter Package</h5>
-          <p><strong>Deposit:</strong> ₦2,000</p>
-          <p><strong>Daily Return:</strong> ₦429</p>
-          <p><strong>Withdrawal Amount:</strong> ₦3,000</p>
-          <button class="btn btn-nera w-100 invest-btn" data-amount="2000">Invest ₦2,000</button>
-        </div>
+    <div class="col-md-3 col-sm-6">
+      <div class="package-card text-center">
+        <h5>Bronze</h5>
+        <p><strong>Deposit:</strong> ₦3,000</p>
+        <p><strong>Return:</strong> ₦5,500</p>
+        <button class="btn btn-nera w-100 invest-btn" data-amount="3000">Invest ₦3,000</button>
       </div>
-      <div class="col-md-3 col-sm-6 col-12">
-        <div class="package-card text-center">
-          <h5>Bronze Package</h5>
-          <p><strong>Deposit:</strong> ₦3,000</p>
-          <p><strong>Daily Return:</strong> ₦715</p>
-          <p><strong>Withdrawal Amount:</strong> ₦5,500</p>
-          <button class="btn btn-nera w-100 invest-btn" data-amount="3000">Invest ₦3,000</button>
-        </div>
+    </div>
+    <div class="col-md-3 col-sm-6">
+      <div class="package-card text-center">
+        <h5>Silver</h5>
+        <p><strong>Deposit:</strong> ₦5,000</p>
+        <p><strong>Return:</strong> ₦9,000</p>
+        <button class="btn btn-nera w-100 invest-btn" data-amount="5000">Invest ₦5,000</button>
       </div>
-      <div class="col-md-3 col-sm-6 col-12">
-        <div class="package-card text-center">
-          <h5>Silver Package</h5>
-          <p><strong>Deposit:</strong> ₦5,000</p>
-          <p><strong>Daily Return:</strong> ₦1,286</p>
-          <p><strong>Withdrawal Amount:</strong> ₦9,000</p>
-          <button class="btn btn-nera w-100 invest-btn" data-amount="5000">Invest ₦5,000</button>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6 col-12">
-        <div class="package-card text-center">
-          <h5>Elite Package</h5>
-          <p><strong>Deposit:</strong> ₦7,500</p>
-          <p><strong>Daily Return:</strong> ₦1,857</p>
-          <p><strong>Withdrawal Amount:</strong> ₦13,000</p>
-          <button class="btn btn-nera w-100 invest-btn" data-amount="7500">Invest ₦7,500</button>
-        </div>
+    </div>
+    <div class="col-md-3 col-sm-6">
+      <div class="package-card text-center">
+        <h5>Elite</h5>
+        <p><strong>Deposit:</strong> ₦7,500</p>
+        <p><strong>Return:</strong> ₦13,000</p>
+        <button class="btn btn-nera w-100 invest-btn" data-amount="7500">Invest ₦7,500</button>
       </div>
     </div>
   </div>
+</div>
 
-  <!-- Footer -->
-  <footer class="text-center py-4 bg-dark text-white mt-5">
-    &copy; 2025 NeraInsight. All rights reserved.
-  </footer>
+<!-- ✅ Footer -->
+<footer>&copy; 2025 NeraInsight. All rights reserved.</footer>
 
-  <!-- Scripts -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://js.paystack.co/v1/inline.js"></script>
-  <script>
-    const API_BASE = 'https://nerainsight.onrender.com/api';
-    const investButtons = document.querySelectorAll('.invest-btn');
-    const returnMap = { 2000: 3000, 3000: 5500, 5000: 9000, 7500: 13000 };
+<!-- ✅ Scripts -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://js.paystack.co/v1/inline.js"></script>
+<script>
+  const API_BASE = 'https://nerainsight.onrender.com/api';
+  const returnMap = { 2000: 3000, 3000: 5500, 5000: 9000, 7500: 13000 };
 
-    investButtons.forEach(button => {
-      button.addEventListener('click', () => {
-        const amount = parseInt(button.getAttribute('data-amount'));
-        const returns = returnMap[amount];
-        const refId = 'NERA_' + Date.now() + '_' + Math.floor(Math.random() * 100000);
+  document.querySelectorAll('.invest-btn').forEach(button => {
+    button.addEventListener('click', () => {
+      const amount = parseInt(button.dataset.amount);
+      const returns = returnMap[amount];
+      const refId = 'NERA_' + Date.now();
 
-        // Safety check
-        if (!user.phone) {
-          alert('⚠️ Phone number not found. Please login again.');
-          localStorage.clear();
-          window.location.href = 'login.html';
-          return;
-        }
+      button.textContent = 'Opening Paystack...';
+      button.disabled = true;
 
-        if (!returnMap[amount]) {
-          alert('Invalid investment package.');
-          return;
-        }
+      const handler = PaystackPop.setup({
+        key: 'pk_live_c5d1acb93adb2112be140b120b26e254c38489cc',
+        email: user.phone + '@nera.com',
+        amount: amount * 100,
+        currency: 'NGN',
+        ref: refId,
+        callback: async function(response) {
+          try {
+            const res = await fetch(`${API_BASE}/topup/paystack/verify`, {
+              method: 'POST',
+              headers: {
+                'Content-Type': 'application/json',
+                Authorization: 'Bearer ' + token
+              },
+              body: JSON.stringify({ reference: response.reference, amount, returns })
+            });
 
-        button.textContent = 'Opening Paystack…';
-        button.disabled = true;
-
-        const handler = PaystackPop.setup({
-          key: 'pk_live_c5d1acb93adb2112be140b120b26e254c38489cc',
-          email: user.phone + '@nera.com',
-          amount: amount * 100,
-          currency: 'NGN',
-          ref: refId,
-          callback: async function(response) {
-            button.textContent = 'Verifying Payment...';
-            try {
-              const verifyRes = await fetch(`${API_BASE}/topup/paystack/verify`, {
-                method: 'POST',
-                headers: {
-                  'Content-Type': 'application/json',
-                  Authorization: 'Bearer ' + token
-                },
-                body: JSON.stringify({ reference: response.reference, amount, returns })
-              });
-
-              const result = await verifyRes.json();
-              if (verifyRes.ok) {
-                alert(result.message || '✅ Investment activated!');
-                window.location.href = 'dashboard.html';
-              } else {
-                alert(result.message || '❌ Verification failed.');
-              }
-            } catch (err) {
-              alert('⚠️ Network error. Try again.');
-              console.error(err);
-            } finally {
-              button.textContent = `Invest ₦${amount.toLocaleString()}`;
-              button.disabled = false;
+            const data = await res.json();
+            if (res.ok) {
+              alert(data.message || '✅ Investment successful!');
+              window.location.href = 'dashboard.html';
+            } else {
+              alert(data.message || '❌ Payment verification failed.');
             }
-          },
-          onClose: function() {
-            alert('⛔ Transaction canceled.');
+          } catch (error) {
+            console.error(error);
+            alert('⚠️ Network error. Try again.');
+          } finally {
             button.textContent = `Invest ₦${amount.toLocaleString()}`;
             button.disabled = false;
           }
-        });
-
-        handler.openIframe();
+        },
+        onClose: () => {
+          alert('⛔ Transaction canceled.');
+          button.textContent = `Invest ₦${amount.toLocaleString()}`;
+          button.disabled = false;
+        }
       });
+
+      handler.openIframe();
     });
-  </script>
+  });
+</script>
+
 </body>
 </html>
