--- a/public/invest.html
+++ b/public/invest.html
@@ -4,86 +4,140 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Invest | NeraInsight</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background-color: #f5f5f5;
+      font-family: 'Segoe UI', sans-serif;
+    }
+    .package-card {
+      border-radius: 12px;
+      background: #fff;
+      padding: 20px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    .btn-nera {
+      background: #2a5298;
+      color: #fff;
+      width: 100%;
+    }
+  </style>
 </head>
 <body>
 
-<div class="container my-5">
-  <h2 class="text-center mb-4">Choose Your Package</h2>
-  <div class="row text-center">
-    <div class="col-md-3 col-6 mb-3">
-      <button class="btn btn-primary w-100 invest-btn" data-amount="2000">Invest ₦2,000</button>
-    </div>
-    <div class="col-md-3 col-6 mb-3">
-      <button class="btn btn-primary w-100 invest-btn" data-amount="3000">Invest ₦3,000</button>
-    </div>
-    <div class="col-md-3 col-6 mb-3">
-      <button class="btn btn-primary w-100 invest-btn" data-amount="5000">Invest ₦5,000</button>
-    </div>
-    <div class="col-md-3 col-6 mb-3">
-      <button class="btn btn-primary w-100 invest-btn" data-amount="7500">Invest ₦7,500</button>
-    </div>
-  </div>
-</div>
-
-<!-- Paystack script -->
-<script src="https://js.paystack.co/v1/inline.js"></script>
 <script>
   const token = localStorage.getItem('neraToken');
   const user = JSON.parse(localStorage.getItem('neraUser'));
-  const returnMap = { 2000: 3000, 3000: 5500, 5000: 9000, 7500: 13000 };
 
   if (!token || !user || !user.phone) {
-    alert("Login required.");
-    window.location.href = "login.html";
+    alert('You must login first!');
+    localStorage.clear();
+    window.location.href = 'login.html';
   }
+</script>
 
-  const buttons = document.querySelectorAll('.invest-btn');
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4">
+  <a class="navbar-brand" href="index.html">₦eraInsight</a>
+</nav>
 
-  buttons.forEach(button => {
+<div class="container my-5">
+  <h3 class="text-center mb-4">Investment Packages</h3>
+  <div class="row g-4">
+
+    <div class="col-md-3">
+      <div class="package-card text-center">
+        <h5>Starter</h5>
+        <p>₦2,000 → ₦3,000</p>
+        <p>Daily: ₦429</p>
+        <button class="btn btn-nera invest-btn" data-amount="2000">Invest ₦2,000</button>
+      </div>
+    </div>
+
+    <div class="col-md-3">
+      <div class="package-card text-center">
+        <h5>Bronze</h5>
+        <p>₦3,000 → ₦5,500</p>
+        <p>Daily: ₦715</p>
+        <button class="btn btn-nera invest-btn" data-amount="3000">Invest ₦3,000</button>
+      </div>
+    </div>
+
+    <div class="col-md-3">
+      <div class="package-card text-center">
+        <h5>Silver</h5>
+        <p>₦5,000 → ₦9,000</p>
+        <p>Daily: ₦1,286</p>
+        <button class="btn btn-nera invest-btn" data-amount="5000">Invest ₦5,000</button>
+      </div>
+    </div>
+
+    <div class="col-md-3">
+      <div class="package-card text-center">
+        <h5>Elite</h5>
+        <p>₦7,500 → ₦13,000</p>
+        <p>Daily: ₦1,857</p>
+        <button class="btn btn-nera invest-btn" data-amount="7500">Invest ₦7,500</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<footer class="text-center mt-5 py-3 bg-dark text-white">
+  &copy; 2025 NeraInsight. All rights reserved.
+</footer>
+
+<!-- Scripts -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://js.paystack.co/v1/inline.js"></script>
+<script>
+  const API = 'https://nerainsight.onrender.com/api';
+  const returnMap = { 2000: 3000, 3000: 5500, 5000: 9000, 7500: 13000 };
+
+  document.querySelectorAll('.invest-btn').forEach(button => {
     button.addEventListener('click', () => {
-      const amount = parseInt(button.getAttribute('data-amount'));
+      const amount = parseInt(button.dataset.amount);
       const returns = returnMap[amount];
-      const refId = "NERA_" + Date.now();
+      const refId = 'NERA_' + Date.now() + '_' + Math.floor(Math.random() * 100000);
 
       button.disabled = true;
-      button.textContent = "Opening Paystack...";
+      button.textContent = 'Opening Paystack…';
 
       const handler = PaystackPop.setup({
         key: 'pk_live_c5d1acb93adb2112be140b120b26e254c38489cc',
-        email: user.phone + "@nera.com",
+        email: user.phone + '@nera.com',
         amount: amount * 100,
-        currency: "NGN",
+        currency: 'NGN',
         ref: refId,
         callback: async function(response) {
           try {
-            const res = await fetch("https://nerainsight.onrender.com/api/topup/paystack/verify", {
-              method: "POST",
+            const res = await fetch(`${API}/topup/paystack/verify`, {
+              method: 'POST',
               headers: {
-                "Content-Type": "application/json",
-                Authorization: "Bearer " + token
+                'Content-Type': 'application/json',
+                Authorization: 'Bearer ' + token
               },
               body: JSON.stringify({ reference: response.reference, amount, returns })
             });
             const data = await res.json();
             if (res.ok) {
-              alert(data.message || "✅ Investment started!");
-              window.location.href = "dashboard.html";
+              alert(data.message || 'Investment started!');
+              window.location.href = 'dashboard.html';
             } else {
-              alert("❌ Payment verified but something went wrong.");
+              alert(data.message || 'Verification failed.');
             }
           } catch (err) {
-            alert("❌ Network error during verification.");
             console.error(err);
+            alert('Network error.');
           } finally {
             button.disabled = false;
             button.textContent = `Invest ₦${amount}`;
           }
         },
         onClose: function() {
+          alert('Payment cancelled');
           button.disabled = false;
           button.textContent = `Invest ₦${amount}`;
-          alert("Transaction cancelled.");
         }
       });
 
